<resources>
    <string name="app_name">StudyGroup</string>
    <string name="title_activity_search">Search</string>
    <string name="title_home">Inicio</string>
    <string name="title_search">Buscar</string>
    <string name="title_create">Crear grupo</string>
    <string name="title_chat">Chats</string>
    <string name="title_account">Perfil</string>
    <string name="textView_filter_search_fragment">Filtrar por</string>
    <string name="hint_searchView_search_fragment">Buscar group, persona o institución</string>
    <string name="group_name_search_fragment">NOMBRE DEL GRUPO</string>
    <string name="subject_recycler_view">Materia</string>
    <string name="school_recycler_view">Facultad</string>
    <string name="assigned_teacher_recycler_view">Profesor asignado</string>
    <string name="assigned_teacher_true">Con profesor asignado</string>
    <string name="assigned_teacher_false">Sin profesor asignado</string>
    <string name="more_info_recycler_view">+Información</string>
    <string name="title_activity_crear_grupo">Crear Grupo</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="crear_grupo">Crear Grupo</string>
    <string name="tv_completar_datos_registro">Completar registro</string>
    <string name="tv_titulo_mis_grupos">Mis grupos</string>
    <string name="es_tutor_registro">Es profesor</string>
    <string name="tv_pais_registro">País:</string>
    <string name="tv_provincia_registro">Provincia:</string>
    <string name="tv_ciudad_registro">Ciudad:</string>
    <string name="tv_universidad_registro">Universidad:</string>
    <string name="tv_facultad_registro">Facultad:</string>
    <string name="tv_carrera_registro">Carrera:</string>
    <string name="tv_materias_registro">Materias aptas:</string>
    <string name="btn_login_google">LOGIN WITH GOOGLE</string>
    <string name="content_description_logo_login">Logo</string>
    <string name="btn_cerrar_sesion">Cerrar Sesión</string>
    <string name="dialog_cerrar_sesion">¿Está seguro que desea cerrar sesión?</string>
    <string name="positive_button">SI</string>
    <string name="negative_button">NO</string>
    <string name="tv_universidad_crear_grupo">Universidad:</string>
    <string name="tv_facultad_crear_grupo">Facultad:</string>
    <string name="tv_carrera_crear_grupo">Carrera:</string>
    <string name="tv_materia_crear_grupo">Materia:</string>
    <string name="et_ubicacion_crear_grupo">No seleccionado</string>
    <string name="tv_lugar_encuentro_crear_grupo">Lugar de encuentro:</string>
    <string name="btn_seleccionar_ubicacion">AGREGAR LUGAR DE ENCUENTRO</string>
    <string name="tv_integrantes_crear_grupo">Integrantes:</string>
    <string name="et_lista_integrantes_crear_grupo">Ninguno</string>
    <string name="btn_agregar_integrantes">AGREGAR INTERGRANTES</string>
    <string name="tv_tutor_crear_grupo">Tutor:</string>
    <string name="et_tutor_crear_grupo">Ninguno</string>
    <string name="btn_seleccionar_tutor">AGREGAR TUTOR</string>
    <string name="btn_crear_grupo">CREAR</string>
    <string name="title_activity_group_maps">Map</string>
    <string name="btn_seleccionar_ubicacion_maps">SELECCIONAR ESTA UBICACIÓN</string>
    <string name="tv_titulo_grupo">Nombre group</string>
    <string name="tv_universidad_grupo">Universidad</string>
    <string name="tv_facultad_grupo">Facultad</string>
    <string name="tv_carrera_grupo">Carrera</string>
    <string name="tv_materia_grupo">Materia</string>
    <string name="tv_lugar_encuentro_grupo">Lugar de encuentro</string>
    <string name="tv_integrantes_grupo">Integrantes</string>
    <string name="tv_tutor_grupo">Tutor</string>
    <string name="welcome_text_notification">, bienvenido a StudyGroup.</string>
    <string name="welcome_title_notification">Bienvenido</string>
    <string name="channel_notification_login">Inicio de sesión</string>
    <string name="channel_notification_login_description">Recibe el mensaje de bienvenida a la aplicación</string>
    <string name="ok_button">ACEPTAR</string>
    <string name="cancel_button">CANCELAR</string>
    <string name="et_subject_register">Ninguna</string>
    <string name="btn_select_subjects">SELECCIONAR MATERIAS</string>
    <string name="se_creo_exitoso">se creó de forma exitosa</string>
    <string name="incomplete_fields">Faltan completar datos</string>
    <string name="title_teacher_dialog_create_group">Seleccione un tutor</string>
    <string name="tv_soon">Proximamente</string>
</resources>
