<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlanco"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_nombre_grupo_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_name_search_fragment"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/recycler_view_title" />

        <TextView
            android:id="@+id/tv_materia_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/recycler_view_normal"
            android:text="@string/subject_recycler_view" />

        <TextView
            android:id="@+id/tv_facultad_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school_recycler_view"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/recycler_view_normal" />

        <TextView
            android:id="@+id/tv_tutor_recyler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/recycler_view_normal"
            android:text="@string/assigned_teacher_recycler_view" />

        <Button
            android:id="@+id/btn_mas_informacion_recycler"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more_info_recycler_view"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textSize="@dimen/recycler_view_normal"
            android:textColor="@color/colorSecondaryText" />

    </LinearLayout>

</androidx.cardview.widget.CardView>