<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin">

    <SearchView
        android:id="@+id/searchView_search_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="@string/hint_searchView_search_fragment">
    </SearchView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textView_filter_search_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textSize="@dimen/activity_normal"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/textView_filter_search_fragment" />

        <Spinner
            android:id="@+id/spinner_filter_search_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_soon_search_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/tv_soon" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_search_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>